--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,7 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2770026091619544"
+          crossorigin="anonymous"></script>
 </body>
 </html>
