--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="icon.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/gh/cferdinandi/gumshoe/dist/gumshoe.polyfills.js"></script>
 
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+
 </body>
 </html>
