--- a/app/src/index.html
+++ b/app/src/index.html
@@ -11,6 +11,18 @@
      crossorigin="anonymous"></script>
 </head>
 <body class="mat-typography">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2770026091619544"
+      crossorigin="anonymous"></script>
+    <!-- content -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-2770026091619544"
+        data-ad-slot="9278033332"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
   <app-root></app-root>
 
 </body>
