--- a/app/src/index.html
+++ b/app/src/index.html
@@ -9,21 +9,15 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2770026091619544"
      crossorigin="anonymous"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GC7NH9H98S"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-GC7NH9H98S');
+</script>   
 </head>
-<body class="mat-typography">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2770026091619544"
-      crossorigin="anonymous"></script>
-    <!-- content -->
-    <ins class="adsbygoogle"
-        style="display:block"
-        data-ad-client="ca-pub-2770026091619544"
-        data-ad-slot="9278033332"
-        data-ad-format="auto"
-        data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
   <app-root></app-root>
-
 </body>
 </html>
